<resources>
    <string name="app_name">Yoga for Life</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="yoga">Yoga</string>
    <string name="medi">Meditation</string>
    <string name="near">Near You</string>
    <string name="category">Choose a Category</string>
    <string name="kids">For Kids</string>
    <string name="adult">For Adults</string>
    <string name="old">For Oldage </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fav">Favourite</string>
    <string name="diet">Diet Chart</string>
    <string name="workout">Workout</string>
    <string name="recommended">Recommended</string>
    <string name="support">Support</string>
    <string name="help">Find Help</string>
    <string name="feed">Give us feedback</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="imageViewText">Image</string>
    <string name="wallpaper">Thoughts of the day!</string>
    <string name="app_string_app_name">app @string/app_name</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

</resources>
